# EstimacionBayesiana

./: .gitignore  pyproject.toml
Entregables/1/: entrega_1.ipynb
Entregables/2/: entrega_2.html  entrega_2.ipynb  entrega_2_con_futbol.ipynb  entrega_2_extended.ipynb
Entregables/Presentaciones/: PRESENTACIÓN PAPER ESTADISTICA BAYESIANA GROISMAN GUTTER.pptx
Entregables/TP/: dataset_generation.ipynb
Entregables/TP/futbol/: .Rhistory  a.nb.html  output.tex
Guias/guia1/: test.ipynb
Programa/: eb2024 - Programa.html
Resources/: EB1.R
bibliografia/: Bibliografia.md  resources.txt  statistical_rethinking_youtube.txt
entregables/1/: entrega_1.ipynb  entrega_1_con_player_data.html  entrega_1_con_player_data.ipynb  entrega_1_programatica.ipynb  players_penalties.csv
entregables/2/: entrega_2.ipynb  entrega_2_con_futbol.ipynb
guias/guia1/: entrega_1.ipynb
guias/guia3/: guia3.ipynb
sandbox/: pyproject.toml
sandbox/batting/: batting.ipynb
sandbox/football/penalties/: scrap_penalty_from_kaggle.ipynb  scrap_penalty_from_kaggle.py
sandbox/football/player_stats/: player_stats.csv  scrap_goal_contribution_from_kaggle.ipynb
sandbox/penalties/: main.py  players_penalties.csv  scrap_penalty_from_kaggle.ipynb  scrap_penalty_from_kaggle.py  team_scrap.py
tp/: BayesRules_Example_Code.R  BayesRules_Example_Code.Rmd  Footballers_Age_Price_Prediction.ipynb  Roadmap.md  TP.Rmd  dataset_generation.ipynb
tp/blossom/: .RData  .Rhistory  blossom.R
tp/futbol/: .Rhistory  output.Rmd  output.md  output.nb.html
tp/spotify/spotify/: .Rhistory  spotify.R
(+20 files in other folders)
